# watashi

./: CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT.jsonld
.github/signpath/: artifact-configuration.json
.github/workflows/: release.yml
native/watashi-host/: Cargo.toml  Watashi-Info.plist  build.rs  sbom.cdx.json  watashi.manifest  watashi.rc
native/watashi-host/src/: discovery.rs  edge.rs  main.rs  net.rs  ui.rs  version.rs
wasm/ai-gftd-wasm-watashi-mfbtsuyc/: magatama.jsonld  wrangler.jsonc
wasm/ai-gftd-wasm-watashi-mfbtsuyc/.gftd-deploy/mfbtsuyc/: node_modules  wrangler.jsonc
wasm/ai-gftd-wasm-watashi-mfbtsuyc/.gftd-deploy/mfbtsuyc/src/: app.ts
wasm/ai-gftd-wasm-watashi-mfbtsuyc/src/: app.ts
