[package]
name = "watashi-host"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Watashi — cross-platform input sharing native host binary (cursor ferry between screens)"

[[bin]]
name = "watashi"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

# KAMI Engine crates
kami-bridge = { path = "../../../../packages/engine/kami-engine/kami-bridge" }
kami-knp = { path = "../../../../packages/engine/kami-engine/kami-knp" }
kami-input = { path = "../../../../packages/engine/kami-engine/kami-input" }
kami-ui-gpu = { path = "../../../../packages/engine/kami-engine/kami-ui-gpu" }
kami-text = { path = "../../../../packages/engine/kami-engine/kami-text" }

# Magatama host
magatama-kami-host = { path = "../../../../packages/runtime/magatama/magatama-kami-host" }

# mDNS peer discovery
mdns-sd = "0.11"
hostname = "0.4"

# Window + GPU
winit = "0.29"
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
